<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/etTitrePrixProduit"
            android:padding="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etPrix"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"/>

            <EditText
                android:id="@+id/prixProduit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etNombreProduit"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"/>

            <EditText
                android:id="@+id/nombreProduit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etTVA"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"/>

            <EditText
                android:id="@+id/tva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="0.18"/>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/buttonAnnuler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="72dp"
                android:layout_marginRight="72dp"
                android:text="@string/buttonAnnuler"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/buttonPrixTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonPrixTotal"
                app:layout_constraintEnd_toStartOf="@+id/buttonAnnuler"
                app:layout_constraintHorizontal_bias="0.57"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="36dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etResultatPrixHT"
                 />

            <TextView
                android:id="@+id/etResultatprixHT"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:textColor="@android:color/black" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="16dp"
            android:layout_marginRight="16dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etResultatPrixTTC"
                 />

            <TextView
                android:id="@+id/etResultatPrixTTC"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>


        </LinearLayout>

</LinearLayout>